docs/api/qiskit/1.2/qiskit.providers.models.BackendProperties.mdx
---
title: BackendProperties (v1.2)
description: API reference for qiskit.providers.models.BackendProperties in qiskit v1.2
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.providers.models.BackendProperties
---

# BackendProperties

<Class id="qiskit.providers.models.BackendProperties" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendproperties.py#L166-L517" signature="qiskit.providers.models.BackendProperties(backend_name, backend_version, last_update_date, qubits, gates, general, **kwargs)" modifiers="class">
  Bases: [`object`](https://docs.python.org/3/library/functions.html#object "(in Python v3.13)")

  Class representing backend properties

  This holds backend properties measured by the provider. All properties which are provided optionally. These properties may describe qubits, gates, or other general properties of the backend.

  Initialize a BackendProperties instance.

  <Admonition title="Deprecated since version 1.2" type="danger">
    The class `qiskit.providers.models.backendproperties.BackendProperties` is deprecated as of qiskit 1.2. It will be removed in the 2.0 release. The models in `qiskit.providers.models` and related objects are part of the deprecated BackendV1 workflow, and no longer necessary for BackendV2. If a user workflow requires these representations it likely relies on deprecated functionality and should be updated to use BackendV2.
  </Admonition>

  **Parameters**

  *   **backend\_name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – Backend name.
  *   **backend\_version** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – Backend version in the form X.Y.Z.
  *   **last\_update\_date** ([*datetime.datetime*](https://docs.python.org/3/library/datetime.html#datetime.datetime "(in Python v3.13)")  *or*[*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – Last date/time that a property was updated. If specified as a `str`, it must be in ISO format.
  *   **qubits** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")) – System qubit parameters as a list of lists of [`Nduv`](qiskit.providers.models.Nduv "qiskit.providers.models.Nduv") objects
  *   **gates** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")) – System gate parameters as a list of [`GateProperties`](qiskit.providers.models.GateProperties "qiskit.providers.models.GateProperties") objects
  *   **general** ([*list*](https://docs.python.org/3/library/stdtypes.html#list "(in Python v3.13)")) – General parameters as a list of [`Nduv`](qiskit.providers.models.Nduv "qiskit.providers.models.Nduv") objects
  *   **kwargs** – optional additional fields

  ## Methods

  ### faulty\_gates

  <Function id="qiskit.providers.models.BackendProperties.faulty_gates" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendproperties.py#L341-L347" signature="faulty_gates()">
    Return a list of faulty gates.
  </Function>

  ### faulty\_qubits

  <Function id="qiskit.providers.models.BackendProperties.faulty_qubits" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendproperties.py#L333-L339" signature="faulty_qubits()">
    Return a list of faulty qubits.
  </Function>

  ### frequency

  <Function id="qiskit.providers.models.BackendProperties.frequency" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendproperties.py#L448-L458" signature="frequency(qubit)">
    Return the frequency of the given qubit.

    **Parameters**

    **qubit** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – Qubit for which to return frequency of.

    **Returns**

    Frequency of the given qubit.

    **Return type**

    [float](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")
  </Function>

  ### from\_dict

  <Function id="qiskit.providers.models.BackendProperties.from_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendproperties.py#L238-L264" signature="from_dict(data)" modifiers="classmethod">
    Create a new BackendProperties object from a dictionary.

    **Parameters**

    **data** ([*dict*](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")) – A dictionary representing the BackendProperties to create. It will be in the same format as output by [`to_dict()`](#qiskit.providers.models.BackendProperties.to_dict "qiskit.providers.models.BackendProperties.to_dict").

    **Returns**

    The BackendProperties from the input dictionary.

    **Return type**

    [BackendProperties](#qiskit.providers.models.BackendProperties "qiskit.providers.models.BackendProperties")
  </Function>

  ### gate\_error

  <Function id="qiskit.providers.models.BackendProperties.gate_error" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendproperties.py#L366-L377" signature="gate_error(gate, qubits)">
    Return gate error estimates from backend properties.

    **Parameters**

    *   **gate** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – The gate for which to get the error.
    *   **qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")  *|*[*Iterable*](https://docs.python.org/3/library/typing.html#typing.Iterable "(in Python v3.13)")*\[*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*]*) – The specific qubits for the gate.

    **Returns**

    Gate error of the given gate and qubit(s).

    **Return type**

    [float](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")
  </Function>

  ### gate\_length

  <Function id="qiskit.providers.models.BackendProperties.gate_length" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendproperties.py#L379-L390" signature="gate_length(gate, qubits)">
    Return the duration of the gate in units of seconds.

    **Parameters**

    *   **gate** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – The gate for which to get the duration.
    *   **qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")  *|*[*Iterable*](https://docs.python.org/3/library/typing.html#typing.Iterable "(in Python v3.13)")*\[*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*]*) – The specific qubits for the gate.

    **Returns**

    Gate length of the given gate and qubit(s).

    **Return type**

    [float](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")
  </Function>

  ### gate\_property

  <Function id="qiskit.providers.models.BackendProperties.gate_property" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendproperties.py#L294-L331" signature="gate_property(gate, qubits=None, name=None)">
    Return the property of the given gate.

    **Parameters**

    *   **gate** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – Name of the gate.
    *   **qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")  *|*[*Iterable*](https://docs.python.org/3/library/typing.html#typing.Iterable "(in Python v3.13)")*\[*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*] | None*) – The qubit to find the property for.
    *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)") *| None*) – Optionally used to specify which gate property to return.

    **Returns**

    Gate property as a tuple of the value and the time it was measured.

    **Raises**

    [**BackendPropertyError**](providers#qiskit.providers.BackendPropertyError "qiskit.providers.BackendPropertyError") – If the property is not found or name is specified but qubit is not.

    **Return type**

    [*Dict*](https://docs.python.org/3/library/typing.html#typing.Dict "(in Python v3.13)")\[[*Tuple*](https://docs.python.org/3/library/typing.html#typing.Tuple "(in Python v3.13)")\[[int](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)"), …], [*Dict*](https://docs.python.org/3/library/typing.html#typing.Dict "(in Python v3.13)")\[[str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)"), [*Tuple*](https://docs.python.org/3/library/typing.html#typing.Tuple "(in Python v3.13)")\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)"), [*datetime*](https://docs.python.org/3/library/datetime.html#datetime.datetime "(in Python v3.13)")]]] | [*Dict*](https://docs.python.org/3/library/typing.html#typing.Dict "(in Python v3.13)")\[[str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)"), [*Tuple*](https://docs.python.org/3/library/typing.html#typing.Tuple "(in Python v3.13)")\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)"), [*datetime*](https://docs.python.org/3/library/datetime.html#datetime.datetime "(in Python v3.13)")]] | [*Tuple*](https://docs.python.org/3/library/typing.html#typing.Tuple "(in Python v3.13)")\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)"), [*datetime*](https://docs.python.org/3/library/datetime.html#datetime.datetime "(in Python v3.13)")]
  </Function>

  ### is\_gate\_operational

  <Function id="qiskit.providers.models.BackendProperties.is_gate_operational" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendproperties.py#L349-L364" signature="is_gate_operational(gate, qubits=None)">
    Return the operational status of the given gate.

    **Parameters**

    *   **gate** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")) – Name of the gate.
    *   **qubits** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")  *|*[*Iterable*](https://docs.python.org/3/library/typing.html#typing.Iterable "(in Python v3.13)")*\[*[*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")*] | None*) – The qubit to find the operational status for.

    **Returns**

    Operational status of the given gate. True if the gate is operational, False otherwise.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")
  </Function>

  ### is\_qubit\_operational

  <Function id="qiskit.providers.models.BackendProperties.is_qubit_operational" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendproperties.py#L484-L497" signature="is_qubit_operational(qubit)">
    Return the operational status of the given qubit.

    **Parameters**

    **qubit** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – Qubit for which to return operational status of.

    **Returns**

    Operational status of the given qubit.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")
  </Function>

  ### qubit\_property

  <Function id="qiskit.providers.models.BackendProperties.qubit_property" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendproperties.py#L392-L422" signature="qubit_property(qubit, name=None)">
    Return the property of the given qubit.

    **Parameters**

    *   **qubit** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – The property to look for.
    *   **name** ([*str*](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)") *| None*) – Optionally used to specify within the hierarchy which property to return.

    **Returns**

    Qubit property as a tuple of the value and the time it was measured.

    **Raises**

    [**BackendPropertyError**](providers#qiskit.providers.BackendPropertyError "qiskit.providers.BackendPropertyError") – If the property is not found.

    **Return type**

    [*Dict*](https://docs.python.org/3/library/typing.html#typing.Dict "(in Python v3.13)")\[[str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)"), [*Tuple*](https://docs.python.org/3/library/typing.html#typing.Tuple "(in Python v3.13)")\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)"), [*datetime*](https://docs.python.org/3/library/datetime.html#datetime.datetime "(in Python v3.13)")]] | [*Tuple*](https://docs.python.org/3/library/typing.html#typing.Tuple "(in Python v3.13)")\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)"), [*datetime*](https://docs.python.org/3/library/datetime.html#datetime.datetime "(in Python v3.13)")]
  </Function>

  ### readout\_error

  <Function id="qiskit.providers.models.BackendProperties.readout_error" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendproperties.py#L460-L470" signature="readout_error(qubit)">
    Return the readout error of the given qubit.

    **Parameters**

    **qubit** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – Qubit for which to return the readout error of.

    **Returns**

    Readout error of the given qubit.

    **Return type**

    [float](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")
  </Function>

  ### readout\_length

  <Function id="qiskit.providers.models.BackendProperties.readout_length" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendproperties.py#L472-L482" signature="readout_length(qubit)">
    Return the readout length \[sec] of the given qubit.

    **Parameters**

    **qubit** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – Qubit for which to return the readout length of.

    **Returns**

    Readout length of the given qubit.

    **Return type**

    [float](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")
  </Function>

  ### t1

  <Function id="qiskit.providers.models.BackendProperties.t1" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendproperties.py#L424-L434" signature="t1(qubit)">
    Return the T1 time of the given qubit.

    **Parameters**

    **qubit** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – Qubit for which to return the T1 time of.

    **Returns**

    T1 time of the given qubit.

    **Return type**

    [float](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")
  </Function>

  ### t2

  <Function id="qiskit.providers.models.BackendProperties.t2" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendproperties.py#L436-L446" signature="t2(qubit)">
    Return the T2 time of the given qubit.

    **Parameters**

    **qubit** ([*int*](https://docs.python.org/3/library/functions.html#int "(in Python v3.13)")) – Qubit for which to return the T2 time of.

    **Returns**

    T2 time of the given qubit.

    **Return type**

    [float](https://docs.python.org/3/library/functions.html#float "(in Python v3.13)")
  </Function>

  ### to\_dict

  <Function id="qiskit.providers.models.BackendProperties.to_dict" github="https://github.com/Qiskit/qiskit/tree/stable/1.2/qiskit/providers/models/backendproperties.py#L266-L286" signature="to_dict()">
    Return a dictionary format representation of the BackendProperties.

    **Returns**

    The dictionary form of the BackendProperties.

    **Return type**

    [dict](https://docs.python.org/3/library/stdtypes.html#dict "(in Python v3.13)")
  </Function>
</Class>

